--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/icons": "^3.0.1",
     "@wapps/gatsby-plugin-material-ui": "^1.1.0",
     "gatsby": "^2.0.19",
+    "gatsby-plugin-crisp-chat": "^2.1.0",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.5",
